--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 <body>
     <div id="tela-inicial">
         <h1>🐤 Bem-vindo ao Letrinhas!</h1>
-        <button onclick="mostrarLicoes()">Começar</button>
+        <p>Escolha um nível:</p>
+        <div class="botoes-niveis">
+            <button onclick="selecionarNivel('facil')">Fácil</button>
+            <button onclick="selecionarNivel('medio')">Médio</button>
+            <button onclick="selecionarNivel('dificil')">Difícil</button>
+        </div>
     </div>
 
     <div id="tela-licoes" class="escondido">
         <h2>Escolha uma palavra:</h2>
         <div id="lista-licoes"></div>
-        <!-- botão voltar removido daqui -->
     </div>
 
     <div id="tela-atividade" class="escondido">
         <h2>Monte a palavra:</h2>
         <div id="emoji" style="font-size: 60px;"></div>
         <div id="sugestoes" class="silabas-container"></div>
-        <div id="resposta" ondragover="permitirSoltar(event)" ondrop="soltar(event)"></div>
+        <div id="resposta"></div> <!-- Aqui removi ondragover e ondrop -->
         <div id="feedback"></div>
         <button onclick="proximaLicao()" id="btn-proximo" class="escondido">Próxima</button>
         <button onclick="reiniciar()">🔄 Tentar de novo</button>
